@@ -638,7 +638,8 @@ function action_type_select(id)
       target: document.getElementById('action_target' + id),
       target_area: document.getElementById('action_target_area' + id),
       flags: document.getElementById('action_flags' + id),
-      vacation: document.getElementById('action_vacation' + id)
+      vacation: document.getElementById('action_vacation' + id),
+      set: document.getElementById('action_set' + id)
     };
 
   if (obj.value == 'fileinto' || obj.value == 'fileinto_copy') {
@@ -655,6 +656,9 @@ function action_type_select(id)
   }
   else if (obj.value == 'vacation') {
     enabled.vacation = 1;
+  }
+  else if (obj.value == 'set') {
+    enabled.set = 1;
   }
 
   for (var x in elems) {
